--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,17 @@ ul {
   padding: 0.3rem 0.5rem;
 }
 
+.btn-active {
+  background-color: #e9ecef;
+}
+
 .main-container {
   padding-left: 5%;
+}
+
+.scenario-title {
+  text-align: center;
+  margin-bottom: 0px;
 }
 
 .filter-text {
@@ -47,7 +56,7 @@ ul {
 }
 
 .graph {
-  margin-top: 2%;
+  /* margin-top: 2%; */
   height: 40vh;
 }
 
