Add threshold label to Graph

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,14 @@ ul {
   margin-bottom: 0px;
 }
 
+.threshold-label {
+  text-align: center;
+}
+
+.bold {
+  font-weight: bold;
+}
+
 .slider {
   width: 100%;
 }
