--- a/src/index.css
+++ b/src/index.css
@@ -210,3 +210,6 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
   background: #95B1C9;
 }
+input[type=range]::-moz-focus-outer {
+  border: 0;
+}
