--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,12 @@ ul {
   padding-left: 28%;
 }
 
+.dropdown-item.active, .dropdown-item:active {
+  color: #fff;
+  text-decoration: none;
+  background-color: lightslategray;
+}
+
 .search-bar {
   justify-content: center;
   margin-top: 5%;
@@ -119,4 +125,33 @@ ul {
   -ms-transform-origin: 0 0;
   -o-transform-origin: 0 0;
   transform-origin: 0 0;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  opacity: 1;
+  z-index: 50;
+}
+
+.tooltip-text {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: left;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  opacity: 0.7;
+  left: 200%;
+  bottom: 100%;
+  margin-left: -60px;
+  padding-left: 50%;
+  font-size: 10px;
+}
+
+.tooltip:hover .tooltip-text {
+  visibility: visible;
 }
