--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  /* font-family: 'Roboto Mono', monospace; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,6 +11,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+    
+}
+
+.callout {
+  font-family: 'Roboto Mono', monospace;
 }
 
 ul {
@@ -90,7 +96,7 @@ ul {
 
 .graph {
   /* margin-top: 2%; */
-  height: 50vh;
+  height: 62vh;
 }
 
 .slider-menu {
@@ -115,6 +121,7 @@ ul {
   margin-bottom: 5%;
   font-size: 0.75rem;
   pointer-events: none;
+  font-weight: bold;
   -webkit-transform: rotate(270deg);
   -moz-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
@@ -142,23 +149,29 @@ input[type=range]::-webkit-slider-runnable-track {
   cursor: pointer;
   animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
-  background: #95B1C9;
+  /* background: #95B1C9; */
+  /* background: #c5d6e4; */
+  background: #d2d2d2;
   border-radius: 1px;
   border: 0px solid #000000;
 }
 input[type=range]::-webkit-slider-thumb {
   box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
+  /* border: 1px solid #2497E3; */
+  border: 1px solid #ffffff;
   height: 18px;
   width: 18px;
   border-radius: 25px;
-  background: #A1D0FF;
+  /* background: #A1D0FF; */
+  background: #3885fa;
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -7px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #95B1C9;
+  /* background: #95B1C9; */
+  /* background: #c5d6e4; */
+  background: #d2d2d2;
 }
 input[type=range]::-moz-range-track {
   width: 100%;
@@ -166,17 +179,21 @@ input[type=range]::-moz-range-track {
   cursor: pointer;
   animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
-  background: #95B1C9;
+  /* background: #95B1C9; */
+  /* background: #c5d6e4; */
+  background: #d2d2d2;
   border-radius: 1px;
   border: 0px solid #000000;
 }
 input[type=range]::-moz-range-thumb {
   box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
+  /* border: 1px solid #2497E3; */
+  border: 1px solid #ffffff;
   height: 18px;
   width: 18px;
   border-radius: 25px;
-  background: #A1D0FF;
+  /* background: #A1D0FF; */
+  background: #3885fa;
   cursor: pointer;
 }
 input[type=range]::-ms-track {
@@ -189,13 +206,17 @@ input[type=range]::-ms-track {
   color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-  background: #95B1C9;
+  /* background: #95B1C9; */
+  /* background: #c5d6e4; */
+  background: #d2d2d2;
   border: 0px solid #000000;
   border-radius: 2px;
   box-shadow: 0px 0px 0px #000000;
 }
 input[type=range]::-ms-fill-upper {
-  background: #95B1C9;
+  /* background: #95B1C9; */
+  /* background: #c5d6e4; */
+  background: #d2d2d2;
   border: 0px solid #000000;
   border-radius: 2px;
   box-shadow: 0px 0px 0px #000000;
@@ -203,18 +224,24 @@ input[type=range]::-ms-fill-upper {
 input[type=range]::-ms-thumb {
   margin-top: 1px;
   box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
+  /* border: 1px solid #2497E3; */
+  border: 1px solid #ffffff;
   height: 18px;
   width: 18px;
   border-radius: 25px;
-  background: #A1D0FF;
+  /* background: #A1D0FF; */
+  background: #3885fa;
   cursor: pointer;
 }
 input[type=range]:focus::-ms-fill-lower {
-  background: #95B1C9;
+  /* background: #95B1C9; */
+  /* background: #c5d6e4; */
+  background: #d2d2d2;
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #95B1C9;
+  /* background: #95B1C9; */
+  /* background: #c5background: #d2d2d2;d6e4; */
+  background: #d2d2d2;
 }
 input[type=range]::-moz-focus-outer {
   border: 0;
