--- a/src/index.css
+++ b/src/index.css
@@ -77,10 +77,6 @@ ul {
   margin-bottom: 0px;
 }
 
-.slider {
-  width: 100%;
-}
-
 .slider-max {
   text-align: end;
 }
@@ -118,7 +114,7 @@ ul {
   bottom: 0;
   left: 0;
   margin-left: 5px;
-  margin-bottom: 5%;
+  margin-bottom: 10%;
   font-size: 0.75rem;
   pointer-events: none;
   font-weight: bold;
@@ -139,6 +135,8 @@ input[type=range] {
   -webkit-appearance: none;
   margin: 10px 0;
   width: 100%;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 input[type=range]:focus {
   outline: none;
@@ -186,7 +184,7 @@ input[type=range]::-moz-range-track {
   border: 0px solid #000000;
 }
 input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px #000000;
+  /* box-shadow: 0px 0px 0px #000000; */
   /* border: 1px solid #2497E3; */
   border: 1px solid #ffffff;
   height: 18px;
