--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 25vh;
+  background-color: #607aa2;
+  /* min-height: 20vh; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
   padding-left: 5%;
+  padding-bottom: 2%;
+  padding-top: 3%;
 }
 
 .App-link {
