--- a/src/index.css
+++ b/src/index.css
@@ -43,23 +43,29 @@ ul {
   list-style-type: none;
 }
 
-.suggest-dropdown {
-  padding-left: 28%;
+.filters {
+  margin-top: 4%;
 }
 
-.dropdown-item.active, .dropdown-item:active {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  /* background-color: lightslategray; */
-  background-color: #3885fa;
+.dropdown {
+  padding-top: 2.8rem;
+  padding-bottom: 1.4rem;
+}
+
+.dropdown-menu {
+  width: 40%;
 }
 
 .search-bar {
-  justify-content: center;
-  margin-top: 5%;
-  padding-left: 5%;
-  padding-right: 5%;
+  font-size: 1.2rem;
+  color: gray;
+  width: 100%;
+  text-align: left;
+  border-color: rgba(0, 0, 0, 0.12);
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 2px;
+  padding-left: 1rem;
+  padding-bottom: .3rem;
+  padding-top: .3rem;
 }
 
 .btn-stat {
