--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ code {
 
 .callout {
   font-family: 'Roboto Mono', monospace;
-  padding-right: 20px;
+  padding: 0px 40px;
 }
 
 ul {
@@ -104,7 +104,7 @@ ul {
 }
 
 .legend-wrapper {
-  margin-left: 10%;
+  /* margin-left: 10%; */
   padding-top: 8px;
 }
 
