--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
+/* @media (min-width: 576px) { 
+  .container, .container-sm {
+    max-width: 676px;
+  }
+}
+
+@media (min-width: 768px) {  
+  .container, .container-md {
+    max-width: 880px;
+  } 
+}
+
+@media (min-width: 992px) { 
+  .container, .container-lg {
+    max-width: 1090px;
+  } 
+}
+
+@media (min-width: 1200px) { 
+  .container, .container-xl {
+    max-width: 1300px;
+  } 
+} */
+
+
 body {
   margin: 0;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
