Add hover on severity to indicate active scenario

--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,10 @@ code {
   font-family: 'PT Sans Narrow', sans-serif;
 }
 
+.title-active {
+  font-weight: bold;
+}
+
 .callout {
   font-family: 'Roboto Mono', monospace;
 }
