--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ li a {
 }
 
 li a:not(.active):hover {
-  color: #4ddaba;
+  color: white;
   text-decoration: none;
 }
 
@@ -95,6 +95,9 @@ a:hover {
 
 .title-active {
   font-weight: bold;
+  background-color: #e9ecef;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .callout {
@@ -174,13 +177,13 @@ ul {
 }
 
 .subtitle {
-  font-size: 13px;
+  font-size: 14px;
   font-style: italic;
   color: gray;
 }
 
 .filter-label {
-  font-size: 13px;
+  font-size: 14px;
   margin-bottom: 0px;
   margin-top: 3px;
 }
@@ -190,17 +193,15 @@ ul {
   padding: 0px 40px;
 }
 
-.bold {
+/* .dynamic-label {
   font-weight: bold;
-}
-
-.legend-wrapper {
-  /* margin-left: 10%; */
-  padding-top: 8px;
-}
+  padding-left: 3px;
+  padding-right: 3px;
+  background-color: #e9ecef;
+} */
 
 .legend {
-  font-size: 9px;
+  font-size: 12px;
   text-align: end;
   margin-bottom: 0px;
   margin-right: 10px;
@@ -414,7 +415,7 @@ input[type=range]::-moz-focus-outer {
   bottom: 100%;
   margin-left: -60px;
   padding-left: 50%;
-  font-size: 10px;
+  font-size: 12px;
 }
 
 .tooltip:hover .tooltip-text {
