--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h4 {
+h1, h2, h3, h4 {
   color: white;
   margin: 0;
 }
@@ -46,6 +46,17 @@ h1, h4 {
 .container {
   /* max-width: 2000px;  */
   margin-left: 5%;
+}
+
+.content-section {
+  text-align: center;
+  padding-left: 8%;
+}
+
+.content-header {
+  text-transform: uppercase;
+  font-size: 30px;
+  margin-bottom: 2rem;
 }
 
 code {
@@ -93,7 +104,7 @@ a:hover {
 }
 
 .siteTitle {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 .customLink {
@@ -139,13 +150,12 @@ ul {
 }
 
 .filters {
-  padding-top: 1.8rem;
+  padding-top: 1rem;
   margin-left: 1%;
 }
 
 .dropdown {
-  padding-top: 2.8rem;
-  padding-bottom: 1.4rem;
+  padding: 1rem 0;
 }
 
 .dropdown-menu {
@@ -236,9 +246,13 @@ ul {
   background-color: #e9ecef;
 } */
 
+.legend-container {
+  margin-bottom: 1rem;
+}
+
 .legend {
   font-size: 12px;
-  text-align: end;
+  text-align: left;
   margin-bottom: 0px;
   margin-right: 10px;
 }
