--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ h1, h2, h3, h4 {
 }
 
 .content-section {
+  font-size: 16px;
   text-align: center;
   padding-left: 8%;
 }
@@ -57,6 +58,12 @@ h1, h2, h3, h4 {
   text-transform: uppercase;
   font-size: 30px;
   margin-bottom: 2rem;
+}
+
+.filter-description {
+  font-size: 12px;
+  max-width: 80%;
+  padding-top: 2%;
 }
 
 code {
@@ -151,7 +158,7 @@ ul {
 
 .filters {
   padding-top: 1rem;
-  margin-left: 1%;
+  margin-left: 1.4rem;
 }
 
 .dropdown {
@@ -206,7 +213,7 @@ ul {
 .scenario-title {
   text-align: center;
   margin-bottom: 0px;
-  font-size: 1rem;
+  font-size: 1.4rem;
 }
 
 .scenario-header {
@@ -225,7 +232,7 @@ ul {
 }
 
 .filter-label {
-  font-size: 14px;
+  font-size: 12px;
   margin-bottom: 0px;
   margin-top: 3px;
 }
@@ -321,7 +328,7 @@ ul {
   bottom: 0;
   left: 0;
   /* margin-left: -5px; */
-  margin-bottom: 12%;
+  margin-bottom: 15%;
 }
 
 .y-axis-label {
@@ -514,18 +521,6 @@ input[type=range]::-moz-focus-outer {
   font-size: 14px;
   margin-top: 0.6rem;
   width: 3rem;
-}
-
-.react-datepicker {
-  margin-left: -140px;
-}
-
-.react-datepicker-popper[data-placement^="top"] .react-datepicker__triangle {
-  margin-left: 140px;
-}
-
-.react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle {
-  margin-left: 140px;
 }
 
 .selector-box {
