trying another monospace font option

--- a/src/index.css
+++ b/src/index.css
@@ -149,6 +149,7 @@ a:hover {
 
 .callout {
   font-family: 'Roboto Mono', monospace;
+  /* font-family: 'Space Mono', monospace; */
   padding-left: 0px;
 }
 
