better mono callout font

--- a/src/index.css
+++ b/src/index.css
@@ -148,8 +148,9 @@ a:hover {
 }
 
 .callout {
-  font-family: 'Roboto Mono', monospace;
+  /* font-family: 'Roboto Mono', monospace; */
   /* font-family: 'Space Mono', monospace; */
+  font-family: 'Cousine', monospace;
   padding-left: 0px;
 }
 
