testing more monospace fonts

--- a/src/index.css
+++ b/src/index.css
@@ -151,6 +151,8 @@ a:hover {
   /* font-family: 'Roboto Mono', monospace; */
   /* font-family: 'Space Mono', monospace; */
   font-family: 'Cousine', monospace;
+  /* font-family: 'Fira Mono', monospace; */
+  /* font-family: 'Anonymous Pro', monospace; */
   padding-left: 0px;
 }
 
