--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,13 @@
     max-width: 1300px;
   } 
 } */
-
+html,body
+{
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  overflow-x: hidden; 
+}
 
 body {
   margin: 0;
