--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ h1, h2, h3, h4 {
 }
 
 .brand {
-  max-width: 11rem;
+  max-width: 14rem;
   padding-top: 0.2rem;
 }
 
@@ -70,7 +70,7 @@ h1, h2, h3, h4 {
 
 .content-section {
   font-size: 16px;
-  text-align: center;
+  text-align: left;
   padding-left: 8%;
 }
 
@@ -210,6 +210,12 @@ ul {
   content: none;
 }
 
+.search-container {
+  background: #fefefe;
+  padding: 5rem 0 2rem 0;
+  min-height: 24rem;
+}
+
 .search-bar {
   font-size: 1.2rem;
   color: gray;
@@ -260,14 +266,14 @@ ul {
   margin-bottom: -0.5rem;
 }
 
-.conf-bounds {
+.switch {
   margin-top: 16px;
   padding-left: 12px;
 }
 
-.subtitle {
+.upload-toggle {
+  padding-left: 0.4rem;
   font-size: 14px;
-  font-style: italic;
   color: gray;
 }
 
