--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,14 @@ h1, h2, h3, h4 {
   padding: 0 0 1rem;
 }
 
+.vis-content {
+  background-color: #fcfcfc;
+  width: 75%;
+  border: 5px solid white;
+  padding: 1rem;
+  margin: 0 auto 3rem auto;
+}
+
 .title-header {
   font-size: 36px;
   margin-bottom: 2rem;
@@ -87,6 +95,11 @@ h1, h2, h3, h4 {
   margin-top: 0.8rem;
   text-transform: uppercase;
   margin-top: 2rem;
+}
+
+.description-header {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
 }
 
 .filter-description {
