--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,8 @@ h1, h2, h3, h4 {
   padding: 0% 5%;
   z-index: 10;
   position: sticky;
-  top: 0
+  top: 0;
+  height: 4.2rem;
 }
 
 .container {
@@ -72,6 +73,14 @@ h1, h2, h3, h4 {
   font-size: 16px;
   text-align: left;
   padding: 0 0 1rem;
+}
+
+.vis-content {
+  background-color: #fcfcfc;
+  width: 75%;
+  border: 5px solid white;
+  padding: 1rem;
+  margin: 0 auto 3rem auto;
 }
 
 .title-header {
@@ -88,6 +97,11 @@ h1, h2, h3, h4 {
   margin-top: 2rem;
 }
 
+.description-header {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+
 .filter-description {
   font-size: 13px;
   max-width: 95%;
@@ -99,39 +113,9 @@ code {
     monospace;
 }
 
-.row {
-  flex-wrap: nowrap;
-  margin-right: 0px;
-  margin-left: 0px;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-li {
-  display: inline;
-  line-height: 2.8rem;
-}
-
 li a {
-  font-size: 18px;
-  color: white;
-  text-align: center;
   padding: 8px;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.active {
-  color: white;
-  font-weight: bold;
-}
+} 
 
 .siteTitle {
   font-size: 1.8rem;
@@ -199,6 +183,11 @@ a:hover {
 
 ul {
   list-style-type: none;
+  padding: 10px 0 0 30px;
+}
+
+li {
+  margin-bottom: 10px;
 }
 
 .filters {
@@ -218,13 +207,6 @@ ul {
 .dropdown-toggle::after {
   content: none;
 }
-
-.search-container {
-  background: #fefefe;
-  padding: 5rem 0 2rem 0;
-  min-height: 24rem;
-}
-
 .search-bar {
   font-size: 1.2rem;
   color: gray;
@@ -566,42 +548,41 @@ input[type=range]::-moz-focus-outer {
 .tooltip {
   position: relative;
   display: inline-block;
-  opacity: 1;
-  z-index: 0;
   cursor: pointer;
+  color: #1890ff;
 }
 
-.tooltip-text {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: left;
-  border-radius: 6px;
-  padding: 5px 0;
+.tooltip .tooltip-text {
+  width: 14rem;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.75);
+  border-radius: 5px;
+  padding: 0.5rem;
   position: absolute;
-  z-index: 1;
-  opacity: 0.7;
-  left: 200%;
   bottom: 100%;
-  margin-left: -60px;
-  padding-left: 50%;
-  font-size: 12px;
-  pointer-events: none;
+  margin-left: -7.4rem;
+  margin-bottom: 0.5rem;
+  z-index: 1;
+  /* border: 1px solid rgba(0, 0, 0, 0.65); */
 }
 
-.tooltip:hover .tooltip-text {
-  visibility: visible;
+.tooltip-text::before {
+  content: '';
+  position: absolute;
+  display: block;    
+  width: 0px;        
+  left: 50%;
+  bottom: 0;
+  border: 10px solid transparent;
+  border-bottom: 0;
+  border-top: 10px solid rgba(0, 0, 0, 0.75);
+  transform: translate(-50%, calc(100% + 0px));
 }
 
 .chart-container {
   margin-top: 10rem;
   border: 1px solid red;
 }
-
-.chart {
-  /* border: 1px solid blue; */
-} 
 
 .chart-callout {
   display: block !important;
