--- a/src/index.css
+++ b/src/index.css
@@ -355,6 +355,25 @@ li {
   font-size: 1.2rem;
 }
 
+.map-parent {
+  position: relative;
+}
+
+.zoom {
+  width: 25px;
+  position: absolute;
+  right: 2px;
+  cursor: pointer;
+}
+
+#zoom_in {
+  top: 2px;
+}
+
+#zoom_out {
+  top: 29px;
+}
+
 .slider-menu {
   margin: 10px 0 20px 0;
 }
