Show Chart callout only on wide screens

--- a/src/index.css
+++ b/src/index.css
@@ -314,6 +314,12 @@ li {
   width: 25%;
 }
 
+@media screen and (max-width: 1000px) {
+  .widescreen-only {
+    display: none
+  }
+}
+
 @media screen and (max-width: 800px) {
   .filters {
     padding: 0;
